wordslab.manager/apps/notebooks/wordslab-notebooks-gpu-app.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordslab-notebooks-ingressroute
  labels:
    wordslab.org/app: wordslab-notebooks
    wordslab.org/component: jupyterlab
  annotations:
    wordslab.org/namespace-default: "notebooks"
    wordslab.org/title: "Jupyterlab notebooks (GPU)"
    wordslab.org/description: "Ubuntu 22.04, Cuda 12.2, Python 3.10, Pytorch 2.0 / Tensorflow 2.13 / JAX 0.4 / scikit-learn 0.23, Jupyterlab 3.6"
    wordslab.org/version: "jupyterlab-3.6.5-lambda-0.1.14-22.04.1_2"
    wordslab.org/date: "09/17/2023"
    wordslab.org/homepage: "https://www.wordslab.org/"
    wordslab.org/source: "https://github.com/wordslab-org/wordslab/tree/main/wordslab.manager/apps/notebooks/wordslab-notebooks-gpu-app.yaml"
    wordslab.org/author: "https://github.com/wordslab-org"
    wordslab.org/license: "Apache License Version 2.0"
    wordslab.org/ingressroute-path: "/lab | Jupyterlab"
    wordslab.org/ingressroute-path1: "/gradio | Web interface (port 7860)"
    wordslab.org/ingressroute-path2: "/fastapi | API endpoint (port 8000)"
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/$$namespace$$`)
    kind: Rule
    services:
    - name: wordslab-notebooks-service
      port: 8888
  - match: PathPrefix(`/$$namespace$$/gradio`)
    kind: Rule
    services:
    - name: wordslab-gradio-service
      port: 7860
    middlewares:
      - name: wordslab-stripprefix-gradio
  - match: PathPrefix(`/$$namespace$$/fastapi`)
    kind: Rule
    services:
    - name: wordslab-fastapi-service
      port: 8000
    middlewares:
      - name: wordslab-stripprefix-fastapi
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: wordslab-stripprefix-gradio
  labels:
    wordslab.org/app: wordslab-notebooks
    wordslab.org/component: jupyterlab
spec:
  stripPrefix:
    prefixes:
      - /$$namespace$$/gradio
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: wordslab-stripprefix-fastapi
  labels:
    wordslab.org/app: wordslab-notebooks
    wordslab.org/component: jupyterlab
spec:
  stripPrefix:
    prefixes:
      - /$$namespace$$/fastapi
---
apiVersion: v1
kind: Service
metadata:
  name: wordslab-notebooks-service
  labels:
    wordslab.org/app: wordslab-notebooks
    wordslab.org/component: jupyterlab
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: http
      protocol: TCP
      name: http
  selector:
    wordslab.org/app: wordslab-notebooks
    wordslab.org/component: jupyterlab
---
apiVersion: v1
kind: Service
metadata:
  name: wordslab-gradio-service
  labels:
    wordslab.org/app: wordslab-notebooks
    wordslab.org/component: jupyterlab
spec:
  type: ClusterIP
  ports:
    - port: 7860
      targetPort: 7860
      protocol: TCP
  selector:
    wordslab.org/app: wordslab-notebooks
    wordslab.org/component: jupyterlab
---
apiVersion: v1
kind: Service
metadata:
  name: wordslab-fastapi-service
  labels:
    wordslab.org/app: wordslab-notebooks
    wordslab.org/component: jupyterlab
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    wordslab.org/app: wordslab-notebooks
    wordslab.org/component: jupyterlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordslab-notebooks-deployment
  labels:
    wordslab.org/app: wordslab-notebooks
    wordslab.org/component: jupyterlab
spec:
  replicas: 1
  selector:
    matchLabels:
      wordslab.org/app: wordslab-notebooks
      wordslab.org/component: jupyterlab
  template:
    metadata:
      labels:
        wordslab.org/app: wordslab-notebooks
        wordslab.org/component: jupyterlab
    spec:
      containers:
      - name: wordslab-jupyter-stack-container
        image: ghcr.io/wordslab-org/jupyter-stack-cuda:jupyterlab-3.6.5-lambda-0.1.14-22.04.1_2
        ports:
        - name: http
          containerPort: 8888
          protocol: TCP
        volumeMounts:
          - name: dshm
            mountPath: /dev/shm
          - name: workspace
            mountPath: /workspace
          - name: models
            mountPath: /models
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: workspace
          persistentVolumeClaim:
            claimName: wordslab-notebooks-workspace-volume
        - name: models
          persistentVolumeClaim:
            claimName: wordslab-notebooks-models-volume
